--- a/pi-hole-unbound/docker-compose.yaml
+++ b/pi-hole-unbound/docker-compose.yaml
@@ -3,12 +3,14 @@ version: '3.7'
 services:
   pihole:
     hostname: pihole
-    image: pihole/pihole
+    depends_on:
+      - unbound
+    image: pihole/pihole:latest
     deploy:
-      mode: replicated
-      replicas: 1
       placement:
         constraints: [node.role == manager]
+    networks:
+      - dns_network
     ports:
       # DNS Ports
       - "53:53/tcp"
@@ -19,27 +21,35 @@ services:
       #- "443:443/tcp"
       # Uncomment the below if using Pi-hole as your DHCP Server
       #- "67:67/udp"
-      # Uncomment to enable unbound access on local server
-      #- 5335:5335/tcp
-      # Uncomment to enable SSH
-      #- 22/tcp 
     environment:
-      - TZ=${TZ:-UTC}
-      - FTLCONF_webserver_api_password=${FTLCONF_webserver_api_password}
-      - FTLCONF_dns_listeningMode=${FTLCONF_dns_listeningMode}
-      - FTLCONF_dns_upstreams=${FTLCONF_dns_upstreams}
-      - FTLCONF_dns_revServers=${FTLCONF_dns_revServers}
-      - FTLCONF_webserver_port=${FTLCONF_webserver_port}
+      # Set the appropriate timezone for your location from
+      # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones, e.g:
+      TZ: ${TZ:-UTC}
+      # Set a password to access the web interface. Not setting one will result in a random password being assigned
+      FTLCONF_webserver_api_password: ${FTLCONF_webserver_api_password}
+      # If using Docker's default `bridge` network setting the dns listening mode should be set to 'all'
+      FTLCONF_dns_listeningMode: 'all'
+      FTLCONF_dns_upstreams: '10.10.10.10#5335' # Unbound
+      # Don't use pihole as a NTP Server
+      FTLCONF_ntp_ipv4_active: ${NTP_IPV4_ACTIVE:-true}
+      FTLCONF_ntp_ipv6_active: ${NTP_IPV6_ACTIVE:-true}
+      FTLCONF_ntp_sync_active: ${NTP_IPV6_ACTIVE:-true}
+      # Set the IP of the DNS server(s) to forward queries to
+      FTLCONF_dns_revServers: ${FTLCONF_dns_revServers}
+      # Set the IP of the web server
+      FTLCONF_webserver_port: ${FTLCONF_webserver_port}
     cap_add:
-      - CAP_SYS_TIME
-      - CAP_SYS_NICE
-      # Recommended but not required (DHCP needs NET_ADMIN)
-      # - NET_ADMIN
-    networks:
-      dns_net:
-        ipv4_address: 172.23.0.7
+      # See https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
+      # Required if you are using Pi-hole as your DHCP server, else not needed
+      #- NET_ADMIN
+      # Required if you are using Pi-hole as your NTP client to be able to set the host's system time
+      #- SYS_TIME
+      # Optional, if Pi-hole should get some more processing time
+      - SYS_NICE
     volumes:
+    # For persisting Pi-hole's databases and common configuration file
       - /mnt/cephfs/pihole/etc/pihole:/etc/pihole:rw
+      # Uncomment the below if you have custom dnsmasq config files that you want to persist. Not needed for most starting fresh with Pi-hole v6. If you're upgrading from v5 you and have used this directory before, you should keep it enabled for the first v6 container start to allow for a complete migration. It can be removed afterwards. Needs environment variable FTLCONF_misc_etc_dnsmasq_d: 'true'
       - /mnt/cephfs/pihole/etc/dnsmasq.d:/etc/dnsmasq.d:rw
     restart: unless-stopped
 
@@ -47,46 +57,41 @@ services:
     hostname: unbound
     image: mvance/unbound-rpi:latest
     deploy:
-      mode: replicated
-      replicas: 1
       placement:
         constraints: [node.role == manager]
+    # use pihole network stack
     networks:
-      dns_net:
-        ipv4_address: 172.23.0.8
+      - dns_network
     volumes:
       - /mnt/cephfs/unbound:/opt/unbound/etc/unbound
+      # log file
+      - /mnt/cephfs/unbound/etc/unbound/unbound.log:/opt/unbound/etc/unbound/unbound.log
     configs:
       - source: unbound-config
-        target: /opt/unbound/etc/unbound/unbound.conf
+        target: /opt/unbound/etc/unbound/unbound.conf:ro
       - source: forward-records-config
         target: /opt/unbound/etc/unbound/forward-records.conf
-      - source: a-records-config
-        target: /opt/unbound/etc/unbound/a-records.conf
-      - source: srv-records-config
-        target: /opt/unbound/etc/unbound/srv-records.conf
+      - source: 10-pi-hole-config
+        target: /opt/unbound/etc/unbound/unbound.conf.d/10-pihole.conf
+      - source: 20-private-domains-config
+        target: /opt/unbound/etc/unbound/unbound.conf.d/20-private-domains.conf
     ports:
       - "5335:53/tcp"
       - "5335:53/udp"
-    healthcheck:
-      test: ["NONE"]
     restart: unless-stopped
 
 networks:
-  dns_net:
-    driver: overlay
-    ipam:
-      config:
-        - subnet: 172.23.0.0/24
   proxy:
     external: true
+  dns_network:
+    driver: overlay
 
 configs:
   unbound-config:
     external: true
   forward-records-config:
     external: true
-  a-records-config:
+  10-pi-hole-config:
     external: true
-  srv-records-config:
+  20-private-domains-config:
     external: true
