--- a/gotify/docker-compose.yaml
+++ b/gotify/docker-compose.yaml
@@ -1,30 +1,13 @@
-version: '3.3'
+version: '3.7'
+
 services:
   gotify:
+    hostname: gotify
     image: gotify/server
-    container_name: gotify
     volumes:
-      - /home/ubuntu/docker/gotify:/app/data
+      - /mnt/cephfs/gotify:/app/data
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
-    networks:
-      proxy:
     environment:
-      - TZ=Europe/London
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.gotify.entrypoints=http"
-      - "traefik.http.routers.gotify.rule=Host(`gotify.yourdomain.com`)"
-      - "traefik.http.middlewares.gotify-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.gotify.middlewares=gotify-https-redirect"
-      - "traefik.http.routers.gotify-secure.entrypoints=https"
-      - "traefik.http.routers.gotify-secure.rule=Host(`gotify.yourdomain.com`)"
-      - "traefik.http.routers.gotify-secure.tls=true"
-      - "traefik.http.routers.gotify-secure.service=gotify"
-      - "traefik.http.services.gotify.loadbalancer.server.port=80"
-      - "traefik.docker.network=proxy"
-
-networks:
-  proxy:
-    external: true
+      - TZ=America/Chicago
